# nix-hapi-provider-porkbun

./: Cargo.toml  README.org  config.example.toml  flake.nix  rust-template.json  tasks.org
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  logging.rs  main.rs
crates/cli/tests/: integration_test.rs
crates/lib/: Cargo.toml
crates/lib/src/: client.rs  config.rs  lib.rs  provider.rs  reconcile.rs
crates/lib/tests/: porkbun_integration.rs
crates/provider/: Cargo.toml
crates/provider/src/: logging.rs  main.rs
frontend/public/: index.html
frontend/src/: Main.elm
nix/lib/: default.nix
nix/modules/: web.nix
