[package]
name = "nix-hapi-provider-porkbun-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
nix-hapi-lib = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tap = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
regex = { workspace = true }

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
mockito = { workspace = true }
nix-hapi-lib = { workspace = true }
