[package]
name = "nix-hapi-provider-porkbun"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "nix-hapi-provider-porkbun"
path = "src/main.rs"

[dependencies]
nix-hapi-lib = { workspace = true }
nix-hapi-provider-porkbun-lib = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
tap = { workspace = true }
